--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ body {font-size:16px;}
 
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="showcase">
-    <h1 class="w3-jumbo"><b>High Altitude Balloon</b></h1>
-    <h1 class="w3-xxxlarge w3-text-red"><b>Project</b></h1>
+    <h1 class="w3-jumbo"><b>Project</b></h1>
+    <h1 class="w3-xxxlarge w3-text-red"><b>High Altitude Balloon</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
   </div>
 
@@ -94,7 +94,7 @@ body {font-size:16px;}
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+        <img src="/w3images/team2.jpg" alt="Mujtaba" style="width:100%">
         <div class="w3-container">
           <h3>Mujtaba Muhammad</h3>
           <p class="w3-opacity">Founder</p>
@@ -104,7 +104,7 @@ body {font-size:16px;}
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+        <img src="/w3images/team1.jpg" alt="Aidan" style="width:100%">
         <div class="w3-container">
           <h3>Aidan Klemmer</h3>
           <p class="w3-opacity">Science and Engineering</p>
