--- a/index.html
+++ b/index.html
@@ -124,47 +124,34 @@ body {font-size:16px;}
     </div>
   </div>
 
-  <!-- Packages / Pricing Tables -->
-  <div class="w3-container" id="packages" style="margin-top:75px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Packages.</b></h1>
+  <!-- Related science and tech -->
+  <div class="w3-container" id="tech" style="margin-top:75px">
+    <h1 class="w3-xxxlarge w3-text-red"><b>Science and Technology</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>Some text our prices. Lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+    <p>Some text about our science and tech. Lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
   </div>
 
   <div class="w3-row-padding">
     <div class="w3-half w3-margin-bottom">
       <ul class="w3-ul w3-light-grey w3-center">
-        <li class="w3-dark-grey w3-xlarge w3-padding-32">Basic</li>
-        <li class="w3-padding-16">Floorplanning</li>
-        <li class="w3-padding-16">10 hours support</li>
-        <li class="w3-padding-16">Photography</li>
-        <li class="w3-padding-16">20% furniture discount</li>
-        <li class="w3-padding-16">Good deals</li>
-        <li class="w3-padding-16">
-          <h2>$ 199</h2>
-          <span class="w3-opacity">per room</span>
-        </li>
-        <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-white w3-padding-large w3-hover-black">Sign Up</button>
-        </li>
+        <li class="w3-dark-grey w3-xlarge w3-padding-32">Flight 1</li>
+        <li class="w3-padding-16">80,000 ft. maximum altitude</li>
+        <li class="w3-padding-16">Temperature Data</li>
+        <li class="w3-padding-16">Pressure Data</li>
+        <li class="w3-padding-16">Basic High Altitude Photography</li>
+        <li class="w3-padding-16">Cellular GPS for location services and retrieval, below 10,000 ft.</li>
       </ul>
     </div>
 
     <div class="w3-half">
       <ul class="w3-ul w3-light-grey w3-center">
-        <li class="w3-red w3-xlarge w3-padding-32">Pro</li>
-        <li class="w3-padding-16">Floorplanning</li>
-        <li class="w3-padding-16">50 hours support</li>
-        <li class="w3-padding-16">Photography</li>
-        <li class="w3-padding-16">50% furniture discount</li>
-        <li class="w3-padding-16">GREAT deals</li>
-        <li class="w3-padding-16">
-          <h2>$ 249</h2>
-          <span class="w3-opacity">per room</span>
-        </li>
-        <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-red w3-padding-large w3-hover-black">Sign Up</button>
-        </li>
+        <li class="w3-red w3-xlarge w3-padding-32">Flight 2</li>
+        <li class="w3-padding-16">100,000 ft. maximum altitude</li>
+        <li class="w3-padding-16">CO2 and Air Quality Data</li>
+        <li class="w3-padding-16">Temperature Data</li>
+        <li class="w3-padding-16">Pressure Data</li>
+        <li class="w3-padding-16">HD High Altitude Video and Photography</li>
+        <li class="w3-padding-16">Radio GPS for realtime tracking at all altitudes</li>
       </ul>
     </div>
   </div>
@@ -173,7 +160,7 @@ body {font-size:16px;}
   <div class="w3-container" id="contact" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Contact</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>Do you have ideas for improving our project? Fill out the form or send us an email.</p>
+    <p>Do you have ideas for improving our projects? Fill out the form below or send us an email.</p>
     <form action="/action_page.php" target="_blank">
       <div class="w3-section">
         <label>Name</label>
@@ -194,8 +181,7 @@ body {font-size:16px;}
 <!-- End page content -->
 </div>
 
-<!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
+<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="http://cdnak1.psbin.com/b2x03yhns5lpjoaz/images/setup/footer_logo_1.png" title="Earlham College" target="_blank" class="w3-hover-opacity">Earlham College</a></p></div>
 
 <script>
 // Script to open and close sidebar
