--- a/index.html
+++ b/index.html
@@ -135,23 +135,23 @@ body {font-size:16px;}
     <div class="w3-half w3-margin-bottom">
       <ul class="w3-ul w3-light-grey w3-center">
         <li class="w3-dark-grey w3-xlarge w3-padding-32">Flight 1</li>
-        <li class="w3-padding-16">80,000 ft. maximum altitude</li>
+        <li class="w3-padding-16">80,000 ft. Maximum Altitude</li>
         <li class="w3-padding-16">Temperature Data</li>
         <li class="w3-padding-16">Pressure Data</li>
         <li class="w3-padding-16">Basic High Altitude Photography</li>
-        <li class="w3-padding-16">Cellular GPS for location services and retrieval, below 10,000 ft.</li>
+        <li class="w3-padding-16">Cellular GPS for Location Services and Retrieval, Below 10,000 ft.</li>
       </ul>
     </div>
 
     <div class="w3-half">
       <ul class="w3-ul w3-light-grey w3-center">
         <li class="w3-red w3-xlarge w3-padding-32">Flight 2</li>
-        <li class="w3-padding-16">100,000 ft. maximum altitude</li>
+        <li class="w3-padding-16">100,000 ft. Maximum Altitude</li>
         <li class="w3-padding-16">CO2 and Air Quality Data</li>
         <li class="w3-padding-16">Temperature Data</li>
         <li class="w3-padding-16">Pressure Data</li>
         <li class="w3-padding-16">HD High Altitude Video and Photography</li>
-        <li class="w3-padding-16">Radio GPS for realtime tracking at all altitudes</li>
+        <li class="w3-padding-16">Radio GPS for Realtime Tracking at all Altitudes</li>
       </ul>
     </div>
   </div>
