--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@ body {font-size:16px;}
 
 <!-- End page content -->
 </div>
-
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="http://cdnak1.psbin.com/b2x03yhns5lpjoaz/images/setup/footer_logo_1.png" title="Earlham College" target="_blank" class="w3-hover-opacity">Earlham College</a></p></div>
+<h5><img src="http://cdnak1.psbin.com/b2x03yhns5lpjoaz/images/setup/footer_logo_1.png" alt="Earlham College" style="margin:15px 0px"></h5>
+<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://earlham.edu/physics/" title="Earlham College" target="_blank" class="w3-hover-opacity">Earlham College Physics and Computer Science</a></p></div>
 
 <script>
 // Script to open and close sidebar
