--- a/index.html
+++ b/index.html
@@ -179,11 +179,12 @@ body {font-size:16px;}
   </div>
 
 <!-- End page content -->
-</div>
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://earlham.edu/physics/" title="Earlham College" target="_blank" class="w3-hover-opacity">Earlham College Physics and Computer Science</a></p></div>
+
 
 <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin-top:128px">
   <a>
+  <div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://earlham.edu/physics/" title="Earlham College" target="_blank" class="w3-hover-opacity">Earlham College Physics and Computer Science</a></p>
+  </div>
   <img src="http://cdnak1.psbin.com/b2x03yhns5lpjoaz/images/setup/footer_logo_1.png" alt="Earlham College" style="margin:15px 0px">
   </a>
 </footer>
