--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {font-size:16px;}
 <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
   <div class="w3-container">
-    <h3 class="w3-padding-64"><b>Company<br>Name</b></h3>
+    <h3 class="w3-padding-64"><b>Earlham Applied Physics<br>and Computer Science Group</b></h3>
   </div>
   <div class="w3-bar-block">
     <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
@@ -181,7 +181,8 @@ body {font-size:16px;}
 <!-- End page content -->
 
 <div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://earlham.edu/physics/" title="Earlham College" target="_blank" class="w3-hover-opacity">Earlham College Physics and Computer Science</a></p>
-  <img src="http://cdnak1.psbin.com/b2x03yhns5lpjoaz/images/setup/footer_logo_1.png" alt="Earlham College" style="margin:15px 0px">
+  <center><img src="http://cdnak1.psbin.com/b2x03yhns5lpjoaz/images/setup/footer_logo_1.png" alt="Earlham College" style="margin:15px 0px">
+  </center>
   </a>
 </div>
 
